2011-10-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failure with autoconf 2.62
	* tests/aclocal-path-precedence.test: Rewrite configure.in,
	rather than appending to it, to avoid spurious failures (at
	least with autoconf 2.62) due to repeated calls to AC_INIT.
	Also, add package name and version arguments to AC_INIT, to
	avoid spurious errors from automake.

2011-10-16  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: avoid using colon character inside arguments of @pxref
	Fixes automake bug#9753
	* doc/automake.texi (VPATH Builds): Avoid using colon character
	`:' inside arguments of @pxref, as this can cause problems in
	the generated `.info' files, and such an usage will be explicitly
	forbidden by future texinfo documentation.
	* THANKS: Update.
	Reported by Дилян Палаузов.

2011-10-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	parallel-tests: warn on conditional TEST_EXTENSIONS definition
	Before this change, automake would have still bailed out, but
	with a confusing error message (about an invalid redefinition
	of TEST_EXTENSIONS).
	* automake.in (handle_tests): Warn explicitly if TEST_EXTENSIONS
	has conditional contents.
	* tests/test-extensions-con.test: New test.
	* tests/Makefile.am (TESTS): Add it.
	* NEWS: Update.

2011-10-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	parallel-tests: don't allow @substitutions@ in TEST_EXTENSIONS
	Even after the last commit `v1.11-476-g90bea64', the checks
	performed by automake on entries in $(TEST_EXTENSIONS) tried to
	allow for @substitited@ stuff.  This however ends up allowing
	quite brittle setups, which, most importantly, are of no real
	practical usefulness anyway.  So it's better to just disallow
	@substitutions@ in TEST_EXTENSIONS altogether, offering a clear
	error message, instead of risking weird bugs and unexpected
	behaviors in the generated Makefile.in.
	* automake.in ($TEST_EXTENSION_PATTERN): Turned from a regular
	expression ...