@@ -1,3 +1,14 @@
+2011-10-18  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: fix spurious failure with FreeBSD make and Yacc in VPATH
+	* tests/subpkg.test: Some cosmetic adjustments.  Move the tests
+	checking that $(YLWRAP) is defined and installed properly when
+	ylwrap is in a default auxdir found in a parent package ...
+	* tests/subpkg-yacc.test: ... into this new test, which carefully
+	avoids to trigger the known bug#7884 (combo FreeBSD make plus Yacc
+	plus VPATH build).
+	* tests/Makefile.am (TESTS): Update.
+
 2011-10-17  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: fix spurious failure with autoconf 2.62
